made the really sexy functions to add dataests and labels to the chartobjects

--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ br {
    background-position: center;
 }
 
+
+/* --  second container  -- */
 .second_container {
     background-color: lightyellow;
     height: 58rem;
