made progress on the chart container 2 again

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ br {
     flex-direction: column;
 }
 .second_container>div>p {
-    font-size: xx-large;
+    font-size: xxx-large;
     font-weight: bolder;
 }
 .second_container>div>div {
