--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ br {
 
 .main_container {
     background-image: url("https://uxmag.com/wp-content/uploads/2022/02/AdobeStock_489122106-1.jpeg");
-    height: 58rem;
+    height: 97vh;
     background-size: cover;
    background-position: center;
 }
@@ -68,25 +68,28 @@ h2 {
 /* --  third container  -- */
 
 .third_container {
-    background-color: lightblue;
-    height: 58rem;
     display: flex;
     justify-content: center;
-    align-items: center;
-
+    border: solid red;
 }
 
 .third_graph_container {
-    width: 95%;
-    height: 90%;
+    width: 100%;
+    height: 100vh;
     background-color: slategray;
     display: flex;
     align-items: center;
     border-radius: 25px;
     justify-content: flex-start;
+    border: solid red;
 }
 
-.third_graph_one {
+.third_container_header {
+    width: 50%;
+}
+
+
+/* .third_graph_one {
     background-image: url("https://cdn.shopify.com/s/files/1/0093/2298/7617/files/Screenshot_2023-05-28_at_2.47.53_pm.png?v=1685249278");
     background-repeat: no-repeat;
     background-size: cover;
@@ -97,6 +100,7 @@ h2 {
     border-radius: 25px;
 
 }
+*/
 
 
 /* --  third container  -- */
