--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ br {
 }
 
 h2 {
-    font-size: xxx-large;
+    font-size: 10vw;
     font-weight: bolder;
 }
 
@@ -87,8 +87,6 @@ h2 {
 .third_container_header {
     width: 50%;
 }
-
-
 /* .third_graph_one {
     background-image: url("https://cdn.shopify.com/s/files/1/0093/2298/7617/files/Screenshot_2023-05-28_at_2.47.53_pm.png?v=1685249278");
     background-repeat: no-repeat;
