--- a/style.css
+++ b/style.css
@@ -75,11 +75,41 @@ body > div.second_container > div > h2 {
     display: block;
 }
 
+/* map-chart */
+
+.map_container {
+
+}
+
+.map_page {
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    background-color: #ffd500;
+    color: white;
+}
+
+#map {
+    width: 100%;
+    height: 500px;
+    position: relative;
+}
+.tooltip {
+    position: absolute;
+    background: rgba(255,255,255,0.9);
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    padding: 5px;
+    pointer-events: none;
+    font-size: 14px;
+    display: none;}
+
+
 /* --  third container  -- */
 
 .third_container {
     display: flex;
-    background: #ffd500;
+    background: #005bbb;
     position: relative;
     height: 100vh;
 }
@@ -97,10 +127,11 @@ body > div.second_container > div > h2 {
 
 .third_container_color h2 {
     font-size: 4em;
+    color: white;
 }
 
 .third_container_color span {
-    color: #0382ab;
+    color: #fbca02;
 }
 
 .third_graph_container {
@@ -115,7 +146,6 @@ body > div.second_container > div > h2 {
     right: 0;
     z-index: 1;
 }
-
 
 
 /* .third_graph_one {
