--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    margin-top: 15rem;
+    margin-top: 56.5vh;
     font-size: 5rem;
 }
 
@@ -23,7 +23,7 @@ br {
 .main_text_container {
     display: flex;
     flex-direction: column;
-    margin-right: 15rem;
+    margin-right: 20vw;
 }
 
 .main_container {
