--- a/style.css
+++ b/style.css
@@ -94,10 +94,9 @@ body > div.second_container > div > h2 {
     color: #000;
 }
 
-.map_tekst {
-    font-size: 20px;
+.map_tekst_container p {
+    font-size: 25px;
 }
-
 
 #map {
     width: 100%;
