--- a/style.css
+++ b/style.css
@@ -156,6 +156,39 @@ body > div.second_container > div > h2 {
     z-index: 1;
 }
 
+.top_word_container {
+    background-color: #ffd500;
+    height: 100vh;
+    display: flex;
+    flex-direction: row; /* Changed from row-reverse to row */
+    align-items: center;
+}
+.top_word_container > div {
+    width: 30%;
+    padding-left: 5vh;
+    padding-right: 5vw;
+
+}
+.top_word_container > div:nth-child(2) {
+    width: 70%; /* Adjust the width as needed */
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.top_word_container > div > h2 { /* Changed from padding-bottom to padding-top */
+    font-size: xxx-large;
+    font-weight: bolder;
+    color: white;
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+
+.top_word_container > div:nth-child(2) > div > canvas {
+    width: 100%;
+    height: 80vh; /* Adjust as needed */
+}
+
 
 /* .third_graph_one {
     background-image: url("https://cdn.shopify.com/s/files/1/0093/2298/7617/files/Screenshot_2023-05-28_at_2.47.53_pm.png?v=1685249278");
