--- a/style.css
+++ b/style.css
@@ -20,13 +20,13 @@ br {
     display: block;
 }
 
-.main_text_container {
+.front_page_text_container {
     display: flex;
     flex-direction: column;
     margin-right: 20vw;
 }
 
-.main_container {
+.front_page_container {
     background-image: url("https://uxmag.com/wp-content/uploads/2022/02/AdobeStock_489122106-1.jpeg");
     height: 97vh;
     background-size: cover;
@@ -181,7 +181,7 @@ body > div.second_container > div > h2 {
 .top_word_container > div > h2 { /* Changed from padding-bottom to padding-top */
     font-size: xxx-large;
     font-weight: bolder;
-    color: white;
+    color: black;
     padding-top: 10%;
     padding-bottom: 10%;
 }
@@ -276,7 +276,6 @@ body > div.second_container > div > h2 {
     padding-top: 20%; /* Changed from padding-bottom to padding-top */
     font-size: 10vh;
     font-weight: bolder;
-
     color: white;
     padding-left: 10%;
     padding-right: 10%;
